2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* futex.h (__need_timespec): Define before including <time.h>.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_object_cap): Remove reference to field weak_p.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* folio.h (folio_object_cap): New function.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* folio.h (struct folio) [RM_INTERN]: Remove field dhazard,
	mhazard.  Add field checksums.  Rearrange data structure.
	(folio_object_type): New function.
	(folio_object_type_set): Likewise.
	(folio_object_policy): Likewise.
	(folio_object_policy_set): Likewise.
	[RM_INTERN]: Include <bit-array.h>.
	(folio_object_wait_queue_p) [RM_INTERN]:New function.
	(folio_object_wait_queue_p_set) [RM_INTERN]:Likewise.
	(folio_object_wait_queue) [RM_INTERN]:Likewise.
	(folio_object_wait_queue_set) [RM_INTERN]:Likewise.
	(folio_object_version) [RM_INTERN]:Likewise.
	(folio_object_version_set) [RM_INTERN]:Likewise.
	(folio_object_content) [RM_INTERN]:Likewise.
	(folio_object_content_set) [RM_INTERN]:Likewise.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* error.h: New file.
	* Makefile.am (includehurd_HEADERS): Add error.h.
	* headers.m4: Link $(BUILDIR)/include/hurd/error.h to error.h.
	* cap.h: Don't include <errno.h>.  Include <hurd/error.h>.
	* exceptions.h: Likewise.
	* futex.h: Likewise.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity_stats): New structure.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* addr-trans.h (CAP_ADDR_TRANS_GUARD_SUBPAGE_BITS): Change to 22.
	(CAP_ADDR_TRANS_GDEPTH_BITS): Change to 6.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy): Rename ADDRESS_SPACE argument to
	TARGET_ADDRESS_SPACE.  Take additional argument
	SOURCE_ADDRESS_SPACE.  Update users.
	(cap_copy_x): Likewise.
	(cap_copy): Likewise.
	(object_slot_copy_out): Rename ADDRESS_SPACE argument to
	OBJECT_ADDRESS_SPACE.  Take additional argument